--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@quasar/extras": "^1.16.4",
     "qrcode": "^1.5.4",
     "quasar": "^2.16.0",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
   },
